[package]
edition = "2018"
publish = false
name = "openkrosskod"
version = "0.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "openkrosskod"
license = "MIT"
repository = "https://github.com/dmitmel/openkrosskod.git"
homepage = "https://github.com/dmitmel/openkrosskod"

[workspace]

[dependencies]
gl = { path = "crates/gl" }
prelude-plus = { path = "crates/prelude-plus" }

sdl2 = "0.34.3"
png = "0.16.7"

serde = "1.0.116"
# simd-json needs serde_json anyway, so the non-SIMD implementation is not maked
# as an optional dependency (plus there's isn't really a "not" feature switch for
# disabling specific dependencies)
serde_json = "1.0.58"
simd-json = { version = "0.3.21", optional = true }

oorandom = "11.1.2"
getrandom = "0.2.0"
num_cpus = "1.13.0"
env_logger = "0.8.1"
log = "0.4.11"

[features]
gl_debug_all_commands = ["gl/debug_all_commands"]
simd_json = ["simd-json"]
