[package]
edition = "2018"
publish = false
name = "openkrosskod"
version = "0.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "openkrosskod"
license = "MIT"
repository = "https://github.com/dmitmel/openkrosskod.git"
homepage = "https://github.com/dmitmel/openkrosskod"

[workspace]

# TODO: crate-type = ["dylib"]
[dependencies]
prelude-plus = { path = "crates/prelude-plus", features = ["log", "anyhow"] }
cardboard_math = { path = "crates/cardboard_math", features = ["serde", "const_fn"] }
cardboard_oogl = { path = "crates/cardboard_oogl" }
cardboard_utils = { path = "crates/cardboard_utils" }

sdl2 = "0.34.3"
png = { version = "0.16.7", default-features = false }

serde = { version = "1.0.116", features = ["derive"] }
# simd-json needs serde_json anyway, so the non-SIMD implementation is not maked
# as an optional dependency (plus there's isn't really a "not" feature switch for
# disabling specific dependencies)
serde_json = "1.0.58"
simd-json = { version = "0.3.21", optional = true }

num_cpus = "1.13.0"

env_logger = { version = "0.8.1", default-features = false, features = ["termcolor", "atty", "humantime"] }


[target.'cfg(unix)'.dependencies]
nix = "0.19.0"


[features]
gl_debug_all_commands = ["cardboard_oogl/debug_all_commands"]
simd_json = ["simd-json"]
