[package]
edition = "2018"
publish = false
name = "openkrosskod"
version = "0.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "openkrosskod"
license = "MIT"
repository = "https://github.com/dmitmel/openkrosskod.git"
homepage = "https://github.com/dmitmel/openkrosskod"

[workspace]

# TODO: crate-type = ["dylib"]
[dependencies]
prelude-plus = { path = "crates/prelude-plus", features = ["log", "anyhow"] }

cardboard_coal = { path = "crates/cardboard_coal" }
cardboard_math = { path = "crates/cardboard_math", features = ["serde"] }
cardboard_oogl = { path = "crates/cardboard_oogl" }
cardboard_utils = { path = "crates/cardboard_utils" }

sdl2 = "0.35.1"
png = "0.17.2"

serde = { version = "1.0.116", features = ["derive"] }
# simd-json needs serde_json anyway, so the non-SIMD implementation is not maked
# as an optional dependency (plus there's isn't really a "not" feature switch for
# disabling specific dependencies)
serde_json = "1.0.58"
simd-json = { version = "0.4.13", optional = true }

num_cpus = "1.13.0"
threadpool = "1.8.1"

env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }

[features]
default = ["screenshot"]

gl_debug_all_commands = ["cardboard_oogl/debug_all_commands"]
screenshot = []

# complex demos
disable_pong = []
game_of_life = ["disable_pong"]
mandelbrot = ["disable_pong"]
marching_squares = ["disable_pong"]
