[package]
name = "cardboard_math"
version = "0.0.0"
publish = false
edition = "2018"
description = "Cardboard Engine: linear algebra and mathematics"

[dependencies]
cfg-if = "1.0.0"
oorandom = "11.1.3"
getrandom = { version = "0.2.0", features = ["std"] }
serde = { version = "1.0.116", features = ["derive"], optional = true }

[features]
const_fn = []
