[package]
name = "cardboard_oogl"
version = "0.0.0"
publish = false
edition = "2018"
description = "Cardboard Engine: Object-Oriented OpenGL wrapper"

[dependencies]
gl = { path = "../gl" }
cardboard_math = { path = "../cardboard_math" }
prelude-plus = { path = "../prelude-plus", features = ["log", "bitflags"] }

[dev-dependencies]
png = "0.17.2"
jpeg-decoder = { version = "0.2.1", default-features = false }
sdl2 = "0.35.1"

[features]
debug_all_commands = ["gl/debug_all_commands"]
