[package]
name = "prelude-plus"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
anyhow = { version = "1.0.34", optional = true }
log = { version = "0.4.11", optional = true }
bitflags = { version = "1.2.1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.19.0", optional = true }

[features]
breakpoint = ["nix"]
